--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "langchain": "^0.0.192",
     "openai": "^4.19.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
